# DTUABE

./: CMakeLists.txt  CMakeSettings.json  DTUABEProjectEditor.cs  DTUABEProjectJsonUtil.cs  IlPatcher.cs  IlStringsEditor.cs  ProcessUtil.cs  Program.cs  README.md  UabeAssetsEditor.cs
AutoUABE/AutoUABE32bit/Plugins/: Mesh.bep  TextAsset.bep  Texture.bep  Utility.bep
AutoUABE/AutoUABE64bit/Plugins/: Mesh.bep  TextAsset.bep  Texture.bep  Utility.bep
